----------
v5.0.0-git
----------

[mjr] Remove Facebook driver.
[jan] Add second home and business phone fields to Kolab backend (Thomas
      Jarosch <thomas.jarosch@intra2net.com>, Request #12776).
[jan] Change sort direction of birthday/anniversary year picker (Request
      #11837).
[mjr] Add ability to store original versions of contact photos when resizing
      them for display.
[mjr] Add tag search to advanced search (Request #13693).
[mms] Added the addGroup API method.
[mjr] Add ability to add special characters to the alpha pager.
[jan] Return ETags with browse() API method.
[jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
      #11889).


-------
v4.2.16
-------

[mjr] Fix synchronizing email fields in certain cases (Bug #14301).
[jan] Continue removing user data if a source doesn't have an __owner field.
[mjr] Fix over-agressive filtering of search results when searching via the API
      (Bug #13945).


-------
v4.2.15
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix searching via the API when specifying fields and not specifying
      source.
[mjr] Require Horde_Perms::DELETE for including an address book  as sync-able.


-------
v4.2.14
-------

[mjr] Fix persisting tags when moving or copying a contact to another address
      book (Bug #14312).
[mjr] Fix resetting state when changing sync_book prefs and device has forced
      multiplex.
[mjr] Fix synchronizing contact notes via ActiveSync when no truncation value
      is requested by the client (Bug #14307).


-------
v4.2.13
-------

[mjr] Honor alternative_name mapping (Bug #14280).
[mjr] Fix dealing with orphaned virtual address books.
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


-------
v4.2.12
-------

[jan] Fix building search query if some fields are set for strict search (Bug
      #12272).
[jan] Use access rules compatible with both Apache 2.2 and 2.4.