@@ -2,6 +2,7 @@
 v5.0.0-git
 ----------
 
+[jan] Add CLI script to search for invalid email addresses.
 [mjr] Remove Facebook driver.
 [jan] Add second home and business phone fields to Kolab backend (Thomas
       Jarosch <thomas.jarosch@intra2net.com>, Request #12776).
